--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,32 @@
-backend
+backend/coverage
+backend/node_modules
 infrastructure
 frontend/node_modules
 frontend/.next
 frontend/.vercel
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+
+# Exclude all .tfvars files, which are likely to contain sensitive data
+*.tfvars
+*.tfvars.json
+
+# Ignore override files as they are usually used to override resources locally
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+
+.env*
+**/node_modules
