--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
     "next": "14.1.0",
+    "postcss": "^8.4.35",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.2",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "axios": "^1.6.7",
     "react-hook-form": "^7.50.0",
-    "qrcode.react": "^3.1.0",
     "react-icons": "^4.12.0",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.17"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
